--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "django (>=5.2.5,<6.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "django-stubs (>=5.2.2,<6.0.0)",
 ]
 
 
