--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Bogdan",email = "bgdnvlkvb7@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
     "django (>=5.2.5,<6.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
@@ -14,11 +14,14 @@ dependencies = [
     "django-stubs (>=5.2.2,<6.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
     "django-imagekit (>=5.0.0,<6.0.0)",
-    "django-service-objects @ git+https://git.snpdev.ru/saltpepper/django-service-objects.git",
+    "django-service-objects @ git+https://git.snpdev.ru/saltpepper/django-service-objects.git#master",
+    "service-objects-autodocs @ git+https://git.snpdev.ru/saltpepper/service-objects-autodocs#v1.0.0",
     "drf-spectacular (>=0.28.0,<0.29.0)",
+    "celery (>=5.5.3,<6.0.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
