--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "service-objects-autodocs @ git+https://git.snpdev.ru/saltpepper/service-objects-autodocs#v1.0.0",
     "drf-spectacular (>=0.28.0,<0.29.0)",
     "celery (>=5.5.3,<6.0.0)",
+    "django-log-request-id (>=2.1.0,<3.0.0)",
 ]
 
 
