--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "django-imagekit (>=5.0.0,<6.0.0)",
     "django-service-objects @ git+https://git.snpdev.ru/saltpepper/django-service-objects.git",
     "python-decouple (>=3.8,<4.0)",
+    "channels[daphne] (>=4.3.1,<5.0.0)",
 ]
 
 
