--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "django-service-objects @ git+https://git.snpdev.ru/saltpepper/django-service-objects.git",
     "python-decouple (>=3.8,<4.0)",
     "channels[daphne] (>=4.3.1,<5.0.0)",
+    "channels-redis (>=4.3.0,<5.0.0)",
 ]
 
 
